--- a/blog/template/header.html
+++ b/blog/template/header.html
@@ -3,6 +3,6 @@
 	<meta charset="utf-8">
 	<head>
 		<title>rymis: personal blog</title>
-		<style src="pygment_style.css"></style>
+		<style src="pygment_styles.css"></style>
 	</head>
 	<body>
