Headers, links, styles

--- a/blog/template/header.html
+++ b/blog/template/header.html
@@ -2,7 +2,25 @@
 <html>
 	<meta charset="utf-8">
 	<head>
+		<!-- Basic Page Needs (come from skeleton)
+		–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 		<title>rymis: personal blog</title>
+
+		<meta name="description" content="">
+		<meta name="author" content="">
+
+		<!-- Mobile Specific Metas
+		–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<!-- FONT
+		–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+		<link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+		<!-- CSS
+		–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/skeleton.css">
 		<link rel="stylesheet" href="pygment_styles.css" type="text/css"/>
 	</head>
 	<body>
