--- a/blog/template/header.html
+++ b/blog/template/header.html
@@ -22,5 +22,16 @@
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/skeleton.css">
 		<link rel="stylesheet" href="pygment_styles.css" type="text/css"/>
+		<script src="jquery-3.2.1.min.js"></script>
+		<script>
+var db = { };
+function initializeBlogging(data) {
+	db = data;
+}
+
+jQuery.ready(function () {
+	jQuery.getJSON("db.json", initializeBlogging())
+});
+		</script>
 	</head>
 	<body>
